feat(16-03): expose dtype residency evidence